# demonet

./: .gitignore  CMakeLists.txt  LICENSE  README.md  engine.py  eval_voc.py  hubconf.py  inference.py  requirements.txt  train.py
.github/workflows/: actions.yml  build.yml  main.yml
conversion/caffe_tools/: caffe.proto
conversion/common/: graph.py
converter/torch_tools/: pytorch_graph.py  pytorch_parser.py
csrc/: DeeplabV3.cpp  DeeplabV3.h  IntermediateLayerGetter.cpp  IntermediateLayerGetter.h  SegmentationModel.cpp  SegmentationModel.h  backbone.cpp  detection.cpp  detector.cpp  detector.h  main.cpp  predict.cpp  utils.h
datasets/: coco_eval.py  transforms.py  utils.py
demonet/: __init__.py  engine.py  eval_voc.py  inference.py  train.py
demonet/config/: CC.py  COCO.py  yolov3.py
demonet/conversion/caffe/: caffe.proto  caffe_net.py  layer_param.py
demonet/conversion/caffe_tools/: net_spec.py
demonet/conversion/common/: emitter.py  graph.py  parser.py
demonet/conversion/pytorch/: pytorch_graph.py  pytorch_parser.py
demonet/conversion/pytorch/engine/: hooks.py
demonet/conversion/torch_tools/: pytorch_graph.py  pytorch_parser.py
demonet/data/: __init__.py  coco.py  coco_eval.py  coco_utils.py  data_utils.py  dataset.py  presets.py  transforms.py  utils.py  voc.py  voc_eval.py  voc_utils.py  yolov3.py
demonet/export/: caffe_export.py  convert.py  model_converter.py
demonet/modeling/: __init__.py  ssd.py  utils.py  yolov3.py
demonet/modeling/backbone/: backbone_utils.py  mobilenet.py  peleenet.py  resnet.py  vgg.py
demonet/modeling/bbox_heads/: yolov3_heads.py
demonet/modeling/box_heads/: box_predictor.py  box_utils.py  multibox_head.py  yolov3_heads.py
demonet/modeling/priors_generator/: anchor_utils.py  prior_box.py
demonet/models/: __init__.py  _utils.py  anchor_utils.py  backbone.py  backbone_utils.py  box_head.py  generalized_ssd.py  mobilenet_v2_ssd_lite.py  mobilenetv2.py  mobilenetv3.py  multibox_head.py  pelee.py  prior_box.py  prior_matcher.py  ssd.py  ssd_mobilenet.py  ssd_mobilenetv3.py  ssd_vgg16.py  ssdlite.py  transform.py
demonet/models/backbone/: mobilenet.py  peleenet.py
demonet/models/box_heads/: box_utils.py  multibox_head.py
demonet/models/priors_generator/: anchor_utils.py  prior_box.py
demonet/util/: image_utils.py  misc.py
demonet/utils/: __init__.py  image.py  metric_logger.py  overlay.py  torch_utils.py
deploy_trt/: boxes.py  calibrator.py  common.py  engine.py  inference.py  model.py
deployment/: CMakeLists.txt  README.md
deployment/src/: main.cpp
experiments/mindspore_experiment/: eval.py  train.py
experiments/mindspore_experiment/src/: box_utils.py  coco_eval.py  config.py  dataset.py  init_params.py  ssd.py
export/: CMakeLists.txt  convert.py  detection.cpp  model_converter.py  onnx_export.py
mindspore/: README.md
models/: __init__.py  _utils.py  backbone.py  box_head.py  generalized_ssd.py  multibox_head.py  pelee.py  prior_box.py  prior_matcher.py  ssd_mobilenet.py
projects/CenterNet/: train_net.py
projects/CenterNet/centernet/: __init__.py  backbone_utils.py  centernet.py  deconv.py  heads.py  transform.py
test/: test_model.py  test_models.py  test_onnx.py  test_ops.py  test_script.py  test_torchscript.py  utils.py
test/tracing/: CMakeLists.txt  test_demonet_tracing.cpp  trace_model.py
tests/: test_yolov3.py
tools/: README.md  detect.py  test.py  train.py
util/: box_ops.py  graph_utils.py  image.py  image_utils.py  misc.py
utils/: distribute.py  image.py  overlay.py
